@@ -15,10 +15,18 @@ vgcfgbackup \- backup volume group descriptor area
 allows you to backup the metadata 
 of your volume groups.
 If you don't name any volume groups on the command line, all of them 
-will be backed up.  This DOESN'T backup user/system data in logical
+will be backed up.
+.sp
+In a default installation, each volume group gets backed up into a separate
+file bearing the name of the volume group in the directory /etc/lvm/backup.
+You can write the backup to an alternative file using -f.  In this case
+if you are backing up more than one volume group the filename is
+treated as a template, and %s gets replaced by the volume group name.
+.sp
+NB. This DOESN'T backup user/system data in logical
 volume(s)!  Backup /etc/lvm regularly too.
 .SH OPTIONS
 See \fBlvm\fP for common options.
 .SH SEE ALSO
 .BR lvm (8),
-.BR vgcreate (8)
+.BR vgcfgrestore (8)
